Declarations like:

    cdecl> explain int (__stdcall **f)()

are now handled correctly.

** Fixed `typedef` of `void`
`typedef void V` is now correctly allowed and `V p` is now correctly flagged as
an error.

** Fixed pointer to `typedef` of reference
Declarations like:

    typedef int &RI
    explain RI *p

are now correctly flagged as illegal.

** Fixed function returning `typedef` of array
Declarations like:

    typedef int A[2]
    explain A f()

are now correctly flagged as illegal.

** Fixed "pointer to function returning pointer to array" function argument
A declaration like `int f(char (*(*)())[])` is now parsed correctly.

** Microsoft `__forceinline` declarations
Added support for `__forceinline` (and `_forceinline`), but they're treated as
`inline`.

** More types
Added `cc_t`, `DIR`, `fsblkcnt_t`, `fsfilcnt_t`, `id_t`, `pthread_key_t`,
`sig_t`, `sighandler_t`, `siginfo_t`, and `timer_t`.


* Changes in Cdecl 10.4

** Microsoft calling conventions
Added support for Microsoft calling conventions __cdecl, __clrcall, __fastcall,
__stdcall, __thiscall, and __vectorcall.

** Partial support for Microsoft's `__declspec`
Microsoft C's `__declspec` syntax is now parsed, but otherwise ignored.  (A
warning is printed that it's ignored.)

** Microsoft `__asm` declarations
Now recognizing Microsoft's `__asm` just to say it's not supported
(just like `asm`).

** More Microsoft types
Added types `__m128`, `__m128d`, `__m128i`, and `__m64`.

** Updated GnuLib for gcc 11
Pulled a fix from upstream GnuLib to fix a compile error under gcc 11.


* Changes in Cdecl 10.3

** Deleted functions and conversion operators
Marking functions and conversion operators `= delete` is now supported.

** Improved or fixed error messages
Improved or fixed several error messages.


* Changes in Cdecl 10.2

** At most one of `virtual`, `final`, or `override`.
In C++, at most one of `virtual`, `final`, or `override` is now printed.

** Added `typedef` to help