@@ -1,0 +1,3 @@
+explain int& r[2]
+             ^
+14: error: array of reference is illegal; did you mean (&r)[]?
