@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain int& r[2] @ 65
